ui/css/style.css
/* !RESETS AND DEFAULTS */
abbr, acronym, address, article, aside, audio, blockquote, body, canvas, caption, cite, code, dd, del, details, dfn, div, dl, dt, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, html, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, p, pre, pre, q, samp, section, summary, table, tbody, td, tfoot, th, thead, time, tr, ul, var, video {
 border: 0;
 outline: 0;
 font-style: normal;
 font-weight: 400;
 font-size: 100%;
 vertical-align: baseline;
 margin: 0;
 padding: 0;
 -webkit-text-size-adjust: 100%
}

a, b, em, i, small, span, strong, sub, sup {
 border: 0;
 outline: 0;
 font-size: 100%;
 vertical-align: baseline;
 margin: 0;
 padding: 0
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 display: block
}

li {
 list-style: none
}

a {
 text-decoration: none
}

blockquote:after, blockquote:before, q:after, q:before {
 content: ""
}

table {
 border-collapse: collapse;
 border-spacing: 0
}

hr {
 display: block;
 height: 1px;
 border-top: 1px solid #000;
 color: #000
}

input, select {
 vertical-align: middle
}

sub {
 vertical-align: sub;
 font-size: smaller;
 line-height: 0px
}

sup {
 vertical-align: super;
 font-size: smaller;
 line-height: 0px
}

button, img, input, label, select, textarea {
 display: inline-block;
 max-width: 100%;
 height: auto
}

button, input, optgroup, option, select, textarea {
 font-family: inherit;
 font-size: inherit;
 font-style: inherit;
 font-weight: inherit
}

button, input, select, textarea {
 outline: 1px solid transparent
}

textarea {
 resize: none;
 overflow: auto
}

a span, button {
 cursor: pointer
}

button {
 border: 0;
 text-align: center
}

button::-moz-focus-inner {
 padding: 0;
 border: 0
}

table {
 table-layout: fixed
}

a[href^=tel] {
 color: inherit
}

select {
 -moz-appearance: none;
 -webkit-appearance: none;
 -ms-appearance: none
}

select:-moz-focusring {
 color: transparent
}

select::-ms-expand {
 display: none
}

/* != FONT SMOOTHING */
body, button, input, textarea {
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale
}

/* != ms-clear */
input[type=text]::-ms-clear {
 display: none
}

/* != BACKGROUND POSITION AND BOX SIZING */
*, :after, :before {
 -webkit-box-sizing: border-box;
 box-sizing: border-box;
 background-position: center;
 background-repeat: no-repeat
}

/* != .clearfix - CLEAR ELEMENTS */
.clear {
 clear: both
}

.clearfix {
 display: block
}

.clearfix:after {
 visibility: hidden;
 display: block;
 font-size: 0;
 content: " ";
 clear: both;
 height: 0
}

/* != .wordwrap - CONTINUE LONG URLS/WORDS ON NEXT LINE */
.wordwrap {
 white-space: pre;
 white-space: pre-wrap;
 white-space: pre-line;
 white-space: -pre-wrap;
 white-space: -o-pre-wrap;
 white-space: -moz-pre-wrap;
 word-wrap: break-word
}

/* !FONTS (@fontface generated with FontSpring Syntax formatting */
@font-face {
 font-family: 'Benton';
 src: url("../fonts/benton/BentonModDisp-Regular.woff2") format("woff2"), url("../fonts/benton/BentonModDisp-Regular.woff") format("woff");
 font-weight: 400;
 font-style: normal
}

@font-face {
 font-family: 'Benton';
 src: url("../fonts/benton/BentonModDisp-RegularItalic.woff2") format("woff2"), url("../fonts/benton/BentonModDisp-RegularItalic.woff") format("woff");
 font-weight: 400;
 font-style: italic
}

@font-face {
 font-family: 'Benton';
 src: url("../fonts/benton/BentonModDisp-Semibold.woff2") format("woff2"), url("../fonts/benton/BentonModDisp-Semibold.woff") format("woff");
 font-weight: 500;
 font-style: normal
}

@font-face {
 font-family: 'Benton';
 src: url("../fonts/benton/BentonModDisp-SemiboldItalic.woff2") format("woff2"), url("../fonts/benton/BentonModDisp-SemiboldItalic.woff") format("woff");
 font-weight: 500;
 font-style: italic
}

@font-face {
 font-family: 'Benton';
 src: url("../fonts/benton/BentonModDisp-Bold.woff2") format("woff2"), url("../fonts/benton/BentonModDisp-Bold.woff") format("woff");
 font-weight: 600;
 font-style: normal
}

@font-face {
 font-family: 'Benton';
 src: url("../fonts/benton/BentonModDisp-BoldItalic.woff2") format("woff2"), url("../fonts/benton/BentonModDisp-BoldItalic.woff") format("woff");
 font-weight: 600;
 font-style: italic
}

@font-face {
 font-family: 'Barlow';
 src: url("../fonts/barlow/BarlowCondensed-Regular.woff2") format("woff2"), url("../fonts/barlow/BarlowCondensed-Regular.woff") format("woff");
 font-weight: 400;
 font-style: normal
}

@font-face {
 font-family: 'Barlow';
 src: url("../fonts/barlow/BarlowCondensed-Italic.woff2") format("woff2"), url("../fonts/barlow/BarlowCondensed-Italic.woff") format("woff");
 font-weight: 400;
 font-style: italic
}

@font-face {
 font-family: 'Barlow';
 src: url("../fonts/barlow/BarlowCondensed-Medium.woff2") format("woff2"), url("../fonts/barlow/BarlowCondensed-Medium.woff") format("woff");
 font-weight: 500;
 font-style: normal
}

@font-face {
 font-family: 'Barlow';
 src: url("../fonts/barlow/BarlowCondensed-MediumItalic.woff2") format("woff2"), url("../fonts/barlow/BarlowCondensed-MediumItalic.woff") format("woff");
 font-weight: 500;
 font-style: italic
}

@font-face {
 font-family: 'Barlow';
 src: url("../fonts/barlow/BarlowCondensed-SemiBoldItalic.woff2") format("woff2"), url("../fonts/barlow/BarlowCondensed-SemiBoldItalic.woff") format("woff");
 font-weight: 600;
 font-style: italic
}

@font-face {
 font-family: 'Barlow';
 src: url("../fonts/barlow/BarlowCondensed-SemiBold.woff2") format("woff2"), url("../fonts/barlow/BarlowCondensed-SemiBold.woff") format("woff");
 font-weight: 600;
 font-style: normal
}

@font-face {
 font-family: 'NewCaledonia';
 src: url("../fonts/newcaledonia/NewCaledoniaLTStd.woff2") format("woff2"), url("../fonts/newcaledonia/NewCaledoniaLTStd.woff") format("woff");
 font-weight: 400;
 font-style: normal
}
/* ... */

